# MediaCollector

./: .gitignore  Ikey168.session  LICENSE  README.md  accounts.db  pyproject.toml
src/: __init__.py  collector.py  database.ini  helpers.py
tests/: test_basic.py  test_discord.py  test_podcast.py
